# F1-data-analytics

./: .gitignore  F1_race_data_analysis.py  README.md  get_car_data.py  main.py  pyproject.toml  requirements.txt  setup.bat  utils.py
src/: __init__.py  get_car_data_v2.py  version_0.01.py
src/data_processing_tool/: get_car_data_v2.py
src/web_application_tool/: F1_race_data_analysis.py  interface.py  main.py  utils.py
